# AI-Stand

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
configs/: pilot_mvp_sample.yaml
configs/api/: default.yaml
configs/data/: demo.yaml  gss.yaml
configs/eval/: behavior.yaml  survey.yaml
configs/samples/: sample_en_pew_policy_topline.yaml  sample_zh_teds2018_se01.yaml
configs/train/: survey_prior.yaml
docker/: Dockerfile.api  Dockerfile.ui
docs/: architecture.md  behavior_benchmark.md  dataset_inventory.md  eval_protocol.md  formal_prompt_benchmark_v2.md  formal_prompt_benchmark_v3.md  paired_behavior_contract.md  pilot_mvp.md  risk_register.md  sample_projects_public.md  success_criteria.md
scripts/: audit_prompt_benchmark_leakage.py  build_behavior_splits.py  build_prompt_benchmark_model_comparison.py  build_splits.py  evaluate_behavior.py  evaluate_deepseek_v3.py  evaluate_prompt_benchmarks.py  evaluate_survey.py  fit_calibration.py  freeze_formal_prompt_holdout.py  freeze_formal_prompt_holdout_v2.py  freeze_formal_prompt_holdout_v3.py  freeze_learned_combiner_split.py  generate_internal_report_zh.py  ingest_gss_microdata.py  ingest_llm_global_opinions.py  run_ablation.py  run_mvp_inference.py  seed_demo.py  train_baselines.py  train_behavior_model.py  train_learned_combiner.py  train_survey_prior.py  validate_formal_prompt_holdout.py
src/spbce/: cli.py  (+1 more)
tests/: conftest.py  test_api.py  test_behavior_benchmark.py  test_behavior_schema.py  test_metrics.py  test_mvp.py  test_ood.py  test_pilot_mvp.py  test_schema.py  test_splits.py
(+103 files in other folders)
