[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spbce"
version = "0.1.0"
description = "Survey Prior + Behavior Calibration Engine research MVP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "datasets>=3.3.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "joblib>=1.4.0",
  "lightgbm>=4.6.0",
  "numpy>=2.1.0",
  "orjson>=3.10.0",
  "pandas>=2.2.0",
  "pydantic>=2.9.0",
  "pyyaml>=6.0.2",
  "scikit-learn>=1.6.0",
  "streamlit>=1.43.0",
  "torch>=2.5.0",
  "transformers>=4.49.0",
  "typer>=0.15.0",
  "uvicorn>=0.34.0",
  "xgboost>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
]

[project.scripts]
spbce-api = "spbce.api.app:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "N",
  "UP",
  "B",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["no-any-return"]
plugins = []
namespace_packages = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
